--- a/src/Cosplay Academy.csproj
+++ b/src/Cosplay Academy.csproj
@@ -87,6 +87,8 @@
     <Compile Include="DirectoryFinder.cs" />
     <Compile Include="ClothingLoader.cs" />
     <Compile Include="Definitions.cs" />
+    <Compile Include="Support\ME_Support.cs" />
+    <Compile Include="Support\Overlay_Support.cs" />
     <Compile Include="Versions.cs" />
     <Compile Include="CharaEvent.cs" />
     <Compile Include="GameEvent.cs" />
@@ -97,6 +99,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
