--- a/src/packages.config
+++ b/src/packages.config
@@ -5,6 +5,7 @@
   <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net35" />
   <package id="IllusionLibs.KoikatsuParty.Assembly-CSharp" version="2019.4.27.2" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27.2" targetFramework="net35" />
+  <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27.2" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.2" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2.2" targetFramework="net35" />
   <package id="IllusionModdingAPI.KKAPI" version="1.15.0" targetFramework="net35" developmentDependency="true" />
