Rework, simplification, added support
Apply process at awake instead of reload, this will cut down on the need for me to call for reloads as the respective plugins will do so in their reload step.
Don't need to call for reloads in special h scenes, talking to NPCS, opening class roster or where ever reload is normally triggered, behavior is maintained in maker mode so outfits can be randomized
added support for Pushup, clothing unlocker, dynamic bone editor, and ABMX support

--- a/src/Cosplay Academy.csproj
+++ b/src/Cosplay Academy.csproj
@@ -88,8 +88,14 @@
       <HintPath>packages\IllusionModdingAPI.KKAPI.1.15.0\lib\net35\KKAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="KK_ClothingUnlocker">
+      <HintPath>..\..\..\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins\KK_Plugins\KK_ClothingUnlocker.dll</HintPath>
+    </Reference>
     <Reference Include="KK_DynamicBoneEditor">
       <HintPath>..\..\..\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins\KK_Plugins\KK_DynamicBoneEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="KK_MaterialEditor">
+      <HintPath>..\..\..\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins\KK_Plugins\KK_MaterialEditor.dll</HintPath>
     </Reference>
     <Reference Include="KK_OverlayMods, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\OverlayMods.Koikatu.6.0.0\lib\net35\KK_OverlayMods.dll</HintPath>
