--- a/src/Cosplay Academy.csproj
+++ b/src/Cosplay Academy.csproj
@@ -39,6 +39,9 @@
   <PropertyGroup>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Hooks.cs" />
     <Compile Include="OutfitData.cs" />
@@ -115,9 +118,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetFileName)" "F:\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins" /S /Y /D
+    <PostBuildEvent>IF EXIST "F:\Satisfactory\Outfit Selection Expansion\bin\BepInEx\plugins" (
+ xcopy "$(TargetFileName)" "F:\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins" /S /Y /D 
 xcopy "$(TargetFileName)" "C:\Program Files (x86)\Steam\steamapps\common\Koikatsu Party\BepInEx\plugins" /S /Y /D
-xcopy "$(TargetFileName)" "F:\Satisfactory\Outfit Selection Expansion\bin\BepInEx\plugins" /S /Y /D</PostBuildEvent>
+ xcopy "$(TargetFileName)" "F:\Satisfactory\Outfit Selection Expansion\bin\BepInEx\plugins" /S /Y /D
+)
+</PostBuildEvent>
   </PropertyGroup>
   <Import Project="packages\IllusionLibs.BepInEx.Harmony.2.2.0.1\build\IllusionLibs.BepInEx.Harmony.targets" Condition="Exists('packages\IllusionLibs.BepInEx.Harmony.2.2.0.1\build\IllusionLibs.BepInEx.Harmony.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
