--- a/src/Cosplay Academy.csproj
+++ b/src/Cosplay Academy.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Support\Hair_Accessory_Support.cs" />
     <Compile Include="Support\KKAMBX_Migrate.cs" />
     <Compile Include="Support\ME_Support.cs" />
+    <Compile Include="Support\MoreAccessories.cs" />
     <Compile Include="Support\Overlay_Support.cs" />
     <Compile Include="CharaEvent.cs" />
     <Compile Include="GameEvent.cs" />
@@ -108,6 +109,7 @@
       <HintPath>..\..\..\[ScrewThisNoise] Koikatsu BetterRepack R9.2\BepInEx\plugins\MoreAccessories.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.XML" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\IllusionLibs.Koikatu.UnityEngine.5.6.2.2\lib\net35\UnityEngine.dll</HintPath>
       <Private>False</Private>
