--- a/Cosplay Academy Sun/packages.config
+++ b/Cosplay Academy Sun/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ABMX.KKABMX" version="4.4.1" targetFramework="net35" developmentDependency="true" />
-  <package id="ExtensibleSaveFormat.Koikatu" version="16.3.0" targetFramework="net35" developmentDependency="true" />
+  <package id="ExtensibleSaveFormat.KoikatsuSunshine" version="16.3.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.5.28" targetFramework="net35" requireReinstallation="true" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.5.28" targetFramework="net35" requireReinstallation="true" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27.4" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27.4" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" />
-  <package id="IllusionModdingAPI.KKAPI" version="1.19.0" targetFramework="net35" developmentDependency="true" />
 </packages>
