--- a/Cosplay Academy Sun/packages.config
+++ b/Cosplay Academy Sun/packages.config
@@ -23,4 +23,5 @@
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" />
   <package id="IllusionLibs.XUnity.AutoTranslator.Plugin.Core" version="4.16.0" targetFramework="net46" />
   <package id="IllusionModdingAPI.KKSAPI" version="1.20.2" targetFramework="net46" developmentDependency="true" />
+  <package id="Sideloader.KoikatsuSunshine" version="16.4.0" targetFramework="net46" developmentDependency="true" />
 </packages>
