--- a/src/packages.config
+++ b/src/packages.config
@@ -9,4 +9,5 @@
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionModdingAPI.KKAPI" version="1.20.0" targetFramework="net35" developmentDependency="true" />
+  <package id="Sideloader.Koikatu" version="16.4.0" targetFramework="net35" developmentDependency="true" />
 </packages>
