--- a/Cosplay Academy Sun/packages.config
+++ b/Cosplay Academy Sun/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ABMX.KKABMX" version="4.4.1" targetFramework="net35" developmentDependency="true" />
   <package id="ABMX.KKSABMX" version="4.4.2" targetFramework="net46" developmentDependency="true" />
+  <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net46" developmentDependency="true" />
   <package id="ExtensibleSaveFormat.KoikatsuSunshine" version="16.3.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" />
