--- a/src/packages.config
+++ b/src/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ABMX.KKABMX" version="4.4.1" targetFramework="net35" developmentDependency="true" />
+  <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net35" developmentDependency="true" />
   <package id="ExtensibleSaveFormat.Koikatu" version="16.3.1" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" />
