--- a/Cosplay Academy Sun/packages.config
+++ b/Cosplay Academy Sun/packages.config
@@ -7,6 +7,7 @@
   <package id="IllusionLibs.BepInEx.MonoMod" version="21.8.5.1" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.9.17" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.9.17" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.MoreAccessories" version="2.0.10" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UniRx" version="2021.9.17" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UniTask" version="2021.9.17" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Unity.TextMeshPro" version="2019.4.9" targetFramework="net46" />
